<resources>
    <string name="app_name">Pet Recovery</string>
    <string name="pet_name_hint">Enter a name for the pet</string>
    <string name="pet_name_label">Name</string>
    <string name="pet_photo_label">Photo</string>
    <string name="pet_location_hint">Enter a location for the pet</string>
    <string name="pet_location_label">Location</string>
    <string name="pet_detail_hint">Enter a detail for the pet</string>
    <string name="pet_details_label">Details</string>
    <string name="pet_found_label">Found</string>
    <string name="pet_Title">Pet Title</string>
    <string name="pet_Date">Pet Date</string>
    <string name="new_pet">New Pet</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d pets</string>
    <string name="remove_pets">Delete All Pets</string>
</resources>
