<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pet_photo"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:src="@drawable/cat" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_name_label" />

    <EditText
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pet_name_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_location_label" />

    <EditText
        android:id="@+id/pet_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pet_location_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_details_label" />

    <EditText
        android:id="@+id/pet_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pet_detail_hint" />

    <Button
        android:id="@+id/pet_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/pet_gender_male"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Male" />

        <CheckBox
            android:id="@+id/pet_gender_female"
            android:layout_width="206dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="Female" />

    </LinearLayout>


    <CheckBox
        android:id="@+id/pet_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_found_label" />
</LinearLayout>